@@ -1,6 +1,6 @@
 Package: effects
 Version: 4.2-3
-Date: 2022-07-24
+Date: 2023-02-19
 Title: Effect Displays for Linear, Generalized Linear, and Other Models
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
@@ -11,7 +11,7 @@ Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaste
     person("David", "Firth", role = "ctb"),
     person("Steve", "Taylor", role = "ctb"),
     person("R Core Team", role="ctb"))
-Depends: R (>= 3.5.0), carData
+Depends: R (>= 3.5.0), carData, datasets
 Suggests: pbkrtest (>= 0.4-4), nlme, MASS, poLCA, heplots, splines, ordinal, car, knitr, betareg, alr4, robustlmm
 Imports: lme4, nnet, lattice, grid, colorspace, graphics, grDevices, stats, survey, utils, estimability (>= 1.4.1), insight
 Description: 
