@@ -37,6 +37,7 @@
 # 2019-10-24: add color options (e.g., for colorblind palette, suggestion of ) to effectsTheme(). J. Fox
 # 2019-11-14: change class(x) == "y" to inherits(x, "y")
 # 2022-02-18: insure that levels of focal predictor in returned objects are in proper order (bug reported by Christoph Scherber, didn't affect plots or tables).
+# 2023-02-19: added levels2dates() and methods. J. Fox (request of Christoph Scherber).
 
 has.intercept <- function(model, ...) any(names(coefficients(model))=="(Intercept)")
 
@@ -663,3 +664,23 @@ levels.character <- function(x) {
 levels.logical <- function(x) {
   c("FALSE", "TRUE")
 }
+
+# to support Date variables
+
+levels2dates <- function(effect, ...){
+  UseMethod("levels2dates")
+}
+
+levels2dates.eff <- function(effect, predictor, origin, evenly.spaced=TRUE, n, ...){
+  levels <- effect$variables[[predictor]]$levels
+  if (evenly.spaced) {
+    if (missing(n)) n <- length(levels)
+    levels <- seq(min(levels), max(levels), length=n)
+  }
+  as.Date(levels, origin)
+}
+
+levels2dates.effpoly <- function(effect, predictor, origin, evenly.spaced=TRUE, n, ...){
+  levels2dates.eff(effect, predictor, origin, evenly.spaced, n, ...)
+}
+
